# chatbot

./: .dockerignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md
backend/app/: main.py  pyproject.toml  requirements.txt  seed.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6090023d1049_create_session_table.py  9db8d2a36591_add_pending_jira_tickets.py  a1b2c3d4e5f6_create_messages_table.py  af7d28136461_create_permissions_and_roles_tables.py  b7c8d9e0f1a2_create_documents_tables.py  c4cd36485924_create_user_and_conversation_tables.py  d8e9f0a1b2c3_add_conversation_id_to_documents.py  e2f4a6b8c0d1_extend_pending_jira_tickets.py
backend/app/api/routes/: admin.py  conversations.py  documents.py  health.py  streamchat.py
backend/app/auth/: cookies.py  handler.py  model.py  router.py  security.py  service.py
backend/app/core/: config.py  database.py  errors.py  logging.py
backend/app/models/onnx/baai-bge-small/: config.json  model.onnx  tokenizer_config.json
backend/app/schemas/: chat.py  models.py  rag.py  schema.py
backend/app/services/: base.py  context_budget.py  conversation.py  documents.py  email.py  embeddings.py  gemini.py  jira.py  memory.py  message.py  rag.py  reranker.py  streaming.py  user.py  vector_store.py  weather.py
backend/app/services/graph/: classifier.py  graph.py  runner.py  state.py  visualize.py
backend/app/services/graph/nodes/: bug_report.py  chat.py  common.py  rag.py  weather.py
frontend/: README.md
frontend/Chatbot/: Dockerfile  components.json  config.json  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/Chatbot/app/: globals.css  layout.tsx  page.tsx
frontend/Chatbot/components/: Form.tsx  navbar.tsx
frontend/Chatbot/hooks/: useAuth.ts  useAutoScroll.ts  useChat.ts  useConversation.ts  useDocuments.ts  useLogout.ts  useVoiceMode.ts
(+38 files in other folders)
