[project]
name = "app"
version = "0.1.0"
description = "Chatbot using Gemini API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0",
    "chromadb>=1.3.0",
    "email-validator>=2.0.0",
    "fastapi[standard]>=0.115.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-huggingface>=0.1.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.0.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.0",
    "faker>=40.21.0",
    "tiktoken>=0.13.0",
    "pymupdf>=1.27.2.3",
    "aiofiles>=25.1.0",
    "onnx>=1.22.0",
    "cohere>=7.0.4",
    "langchain>=1.3.9",
    "langchain-classic>=1.0.8",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.5",
    "langchain-community>=0.4.2",
    "onnxruntime>=1.26.0",
    "optimum[onnxruntime]>=1.23.1",
    "langgraph>=1.2.5",
    "httpx>=0.28.1",
    "transformers>=4.57.6",
    "pinecone>=9.1.0",
    "sentence-transformers>=5.6.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
