[project]
name = "app"
version = "0.1.0"
description = "Chatbot using Gemini API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "fastapi[standard]>=0.115.0",
    "langchain-text-splitters>=1.1.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.0.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.0",
    "tiktoken>=0.13.0",
    "pymupdf>=1.27.2.3",
    "aiofiles>=25.1.0",
    "cohere>=7.0.4",
    "onnxruntime>=1.26.0",
    "tokenizers>=0.19.0",
    "langgraph>=1.2.5",
    "httpx>=0.28.1",
    "pinecone>=9.1.0",
    "google-genai>=2.7.0",
    "langchain-core>=1.4.7",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
